k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jurisd
  namespace: jurisd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - jurisd.itsa.house
      secretName: jurisd-tls
  rules:
    - host: jurisd.itsa.house
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jurisd
                port:
                  number: 3000
